@@ -1,8 +1,8 @@
 Package: RPushbullet
 Type: Package
 Title: R Interface to the Pushbullet Messaging Service
-Version: 0.3.3
-Date: 2020-01-18
+Version: 0.3.3.1
+Date: 2020-06-13
 Author: Dirk Eddelbuettel with contributions by Bill Evans, Mike Birdgeneau, 
  Henrik Bengtsson, Seth Wenchel, Colin Gillespie and Chan-Yub Park
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
